flux/namespaces/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # TODO: needed to add entry in the /etc/hosts to point jenkins.k8s-infra.mydomain.com to 127.0.01
  - host: jenkins.k8s-infra.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: jenkins
           port:
             number: 8080
